...
        app:layout_constraintTop_toBottomOf="@id/input_password"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        style="@style/Widget.PawPals.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@id/input_confirm_password"
...
